------------------------------------------------------------------------
r2091 | gaser | 2022-08-16 18:10:01

Changed paths:
 M CHANGES.txt
 M cat_plot_boxplot.m
 M cat_plot_scatter.m
 M cat_surf_results.m
 M cat_vol_slice_overlay.m


Changed: Added dark color mode to cat_plot_boxplot.m.
Changed: Updated handling of different designs in cat_surf_results.m.
------------------------------------------------------------------------
r2090 | gaser | 2022-08-16 15:37:42

Changed paths:
 M CHANGES.txt
 M cat_io_volctype.m
 M cat_io_xml.m
 M cat_plot_histogram.m
 M cat_stat_check_SPM.m
 M cat_stat_homogeneity.m
 M cat_surf_results.m
 M cat_vol_slice_overlay.m
R  cg_create_MPM.m -> internal/cg_create_MPM.m
R  cg_io_send_to_server.m -> internal/cg_io_send_to_server.m


Changed: Changed some function back to use of spm_progress_bar where calls are 
         made during preprocessing.
Changed: Set cat_plot_scatter to defined figure in cat_plot_histogram to 
         prevent opening of new windows.
Changed: Added mask field SPM.xM to cat_stat_check_SPM to allow masking for
         calls of cat_stat_homogeneity.m and changed scaling of design matrix.
Changed: Suppressed call to spm_input in cat_vol_slice_overlay.m if not needed.   
Changed: Moved some older tools to internal.      
Fixed:   Solved display issues in cat_surf_results if no results survived.

------------------------------------------------------------------------
r2089 | gaser | 2022-08-15 23:53:25

Changed paths:
 M CHANGES.txt
 M cat_long_createTPM.m
 M cat_main_clean_gwc.m
 M cat_main_clean_gwc1639.m
 M cat_main_reportcmd.m
 M cat_main_updateSPM.m
 M cat_main_updateSPM1639.m
 M cat_progress_bar.m
 M cat_run_job.m
 M cat_run_job1639.m
 M cat_run_job_APRGs.m
 M cat_spm_preproc_write8.m
 M cat_spm_shoot_template.m
 M cat_stat_homogeneity.m
 M cat_surf_results.m
 M cat_surf_surf2roi.m
 M cat_vol_headtrimming.m
 M cat_vol_imcalc.m
 M cat_vol_maskimage.m
 M cat_vol_sanlm.m
 M cat_vol_sanlm2.m

